--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -1,29 +1,11 @@
 @import '~src/appTheme.scss'; 
 
 $btnColumnShift: 72px; //used to control the left column for both parent and child tables
-
+$selectionColumnShift: 32px;
 // .selectionBoxUnchecked{
 //   background-color:red;
 // }
 
-#testCheckbox{
-  label{
-    height: 40px !important;
-    width: 40px !important;
-    div.mat-checkbox-inner-container{
-      height: 40px !important;
-      width: 40px !important;
-      div{
-        height: 40px !important;
-        width: 40px !important;
-        svg{
-          height: 40px !important;
-          width: 40px !important;
-        }
-      }
-    }
-  }
-}
 
 table {
   width: 100%;
@@ -47,30 +29,6 @@ table {
   // &.listTable{
   //   margin-top: 10px;
   // }
-}
-.loading-indicator {
-  position: fixed;
-  z-index: 999;
-  height: 2em;
-  width: 2em;
-  overflow: show;
-  margin: auto;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-
-/* Transparent Overlay */
-.loading-indicator:before {
-  content: '';
-  display: block;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.3);
 }
 
 //Controls material expand/collapse buttons at all levels
@@ -127,11 +85,19 @@ tr.example-element-row:not(.example-expanded-row):active {
   min-width:$btnColumnShift; //FF and IE
 }
 
-.selectionBoxColumn{
+.sbc{ //selectionBoxColumn
   padding: 0 !important;
   border-bottom:none !important;
   border-top:none !important;
 }
+.sbcShifted{
+  padding: 0 !important;
+  border-bottom:none !important;
+  border-top:none !important;
+  min-width: $selectionColumnShift;
+  width: $selectionColumnShift; 
+}
+
 
 //controls the most left column of the list table - created to make a buffer equal to the button width columns in parent tables
 .pseudoExpand{
@@ -233,7 +199,14 @@ tr.mat-footer-row{
 
 //Controls the settings for the header information above each list table
 .phaseInfoBuffer{
+  min-width:($btnColumnShift - 15);
   width:($btnColumnShift - 15);
+  height:1px;
+  float:left;
+}
+.phaseInfoBuffer2{
+  min-width:($btnColumnShift + $selectionColumnShift - 15);
+  width:($btnColumnShift + $selectionColumnShift - 15);
   height:1px;
   float:left;
 }
