--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -20,9 +20,7 @@
         <ng-container matColumnDef="selectionBox">
             <th mat-header-cell *matHeaderCellDef [ngClass]="selectionMode? 'sbcShifted' : 'sbc'"></th>
             <td mat-cell *matCellDef="let element" [ngClass]="selectionMode? 'sbcShifted' : 'sbc'">
-                <mat-checkbox class="md-checkbox" #clientTable [(ngModel)]="element.Measure.Selected" [(indeterminate)]="element.Measure.Indeterminate" (change)="ToogleChecks(element)" *ngIf="selectionMode == true" [ngClass]="{
-                        'selectionBoxUnchecked': !checked
-                    }"></mat-checkbox>
+                <mat-checkbox class="md-checkbox" #clientTable [(ngModel)]="element.Measure.Selected" [(indeterminate)]="element.Measure.Indeterminate" (change)="ToogleChecks(element)" *ngIf="selectionMode == true"></mat-checkbox>
             </td>
             <td mat-footer-cell *matFooterCellDef [ngClass]="selectionMode? 'sbcShifted' : 'sbc'"></td>
         </ng-container>
@@ -153,7 +151,10 @@
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="clientDisplayedColumns.length">
                 <div class="example-element-detail" [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'"
-                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'">
+                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'"
+                    [ngClass]="{
+                        'selectionBoxUnchecked': element.Measure.Selected == false
+                    }">
                     <div style="width:100%">
                         <table id='table2' mat-table [dataSource]="element.MailTypeList" matSort (matSortChange)="SortFunction($event, element.MailTypeList)"
                             multiTemplateDataRows>
@@ -325,7 +326,10 @@
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="mailTypeDisplayedColumns.length">
                 <div class="example-element-detail" [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'"
-                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'">
+                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'"
+                    [ngClass]="{
+                        'selectionBoxUnchecked': element.Measure.Selected == false
+                    }">
                     <div style="width:100%">
                         <table id=table3 mat-table [dataSource]="element.CampaignList" multiTemplateDataRows matSort
                             (matSortChange)="SortFunction($event, element)">
@@ -579,7 +583,10 @@
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="campaignDisplayedColumns.length">
                 <div class="example-element-detail" [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'"
-                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'">
+                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'"
+                    [ngClass]="{
+                        'selectionBoxUnchecked': element.Measure.Selected == false
+                    }">
                     <div style="width:100%">
                         <table id=table4 mat-table [dataSource]="element.PhaseList" multiTemplateDataRows matSort
                             (matSortChange)="SortFunction($event, element)">
@@ -873,7 +880,10 @@
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="phaseDisplayedColumns.length">
                 <div class="example-element-detail" [@detailExpand]="element.Measure.Expanded ? 'expanded' : 'collapsed'"
-                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'">
+                    [style.height]="element.Measure.Expanded ? 'unset' : '0 !important'"
+                    [ngClass]="{
+                        'selectionBoxUnchecked': element.Measure.Selected == false
+                    }">
                     <div style="width:100%">
                         <div [ngClass]="selectionMode ? 'phaseInfoBuffer2' : 'phaseInfoBuffer'"></div>
                         <div class="row">
@@ -1161,23 +1171,38 @@
 
 
 
-        <tr mat-header-row *matHeaderRowDef="mailListDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let element; columns: mailListDisplayedColumns;" class="example-element-row">
+        <tr mat-header-row *matHeaderRowDef="mailListDisplayedColumns" [ngClass]="{
+            'selectionBoxUnchecked': element.Measure.Selected == false
+        }"></tr>
+        <tr mat-row *matRowDef="let element; columns: mailListDisplayedColumns;" class="example-element-row"
+        [ngClass]="{
+            'selectionBoxUnchecked': element.Measure.Selected == false
+        }" >
         </tr>
         <tr mat-footer-row [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }"
-            *matFooterRowDef="mailListDisplayedColumns"></tr>
+            *matFooterRowDef="mailListDisplayedColumns" [ngClass]="{
+                'selectionBoxUnchecked': element.Measure.Selected == false
+            }"></tr>
     </table>
 </div>
 </div>
 </td>
 </ng-container>
 <tr mat-header-row [ngStyle]="{'visibility':element.PhaseList[0].Measure.Expanded ? 'collapse' : 'visible' }"
-    *matHeaderRowDef="phaseDisplayedColumns"></tr>
+    *matHeaderRowDef="phaseDisplayedColumns"
+    [ngClass]="{
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }"></tr>
 <tr mat-row *matRowDef="let element; columns: phaseDisplayedColumns;" class="example-element-row"
-    [class.example-expanded-row]="element.Measure.Expanded">
+    [ngClass]="{
+        'example-expanded-row': element.Measure.Expanded,
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }">
 </tr>
 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-<tr mat-footer-row [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }" *matFooterRowDef="phaseDisplayedColumns"></tr>
+<tr mat-footer-row [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }" *matFooterRowDef="phaseDisplayedColumns" [ngClass]="{
+    'selectionBoxUnchecked': element.Measure.Selected == false
+}"></tr>
 </table>
 </div>
 </div>
@@ -1185,12 +1210,20 @@
 </ng-container>
 
 <tr mat-header-row [ngStyle]="{'visibility':element.CampaignList[0].Measure.Expanded ? 'collapse' : 'visible' }"
-    *matHeaderRowDef="campaignDisplayedColumns"></tr>
+    *matHeaderRowDef="campaignDisplayedColumns"
+    [ngClass]="{
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }"></tr>
 <tr mat-row *matRowDef="let element; columns: campaignDisplayedColumns;" class="example-element-row"
-    [class.example-expanded-row]="element.Measure.Expanded">
+    [ngClass]="{
+        'example-expanded-row': element.Measure.Expanded,
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }">
 </tr>
 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-<tr mat-footer-row [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }" *matFooterRowDef="campaignDisplayedColumns"></tr>
+<tr mat-footer-row [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }" *matFooterRowDef="campaignDisplayedColumns" [ngClass]="{
+    'selectionBoxUnchecked': element.Measure.Selected == false
+}"></tr>
 </table>
 </div>
 
@@ -1198,13 +1231,21 @@
 </td>
 </ng-container>
 <tr mat-header-row [ngStyle]="{'visibility':element.MailTypeList[0].Measure.Expanded ? 'collapse' : 'visible' }"
-    *matHeaderRowDef="mailTypeDisplayedColumns"></tr>
+    *matHeaderRowDef="mailTypeDisplayedColumns"
+    [ngClass]="{
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }"></tr>
 <tr mat-row *matRowDef="let element; columns: mailTypeDisplayedColumns;" class="example-element-row"
-    [class.example-expanded-row]="element.Measure.Expanded">
+    [ngClass]="{
+        'example-expanded-row': element.Measure.Expanded,
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }">
 </tr>
 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 <tr mat-footer-row [ngStyle]="{'visibility':element.Measure.Expanded ? 'visible' : 'collapse' }" *matFooterRowDef="mailTypeDisplayedColumns"
-    class="mailTypeElementDefault"></tr>
+    class="mailTypeElementDefault" [ngClass]="{
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }"></tr>
 </table>
 </div>
 </div>
@@ -1213,7 +1254,10 @@
 <tr mat-header-row [ngStyle]="{'visibility':this.rootReturns[0].Measure.Expanded ? 'collapse' : 'visible' }"
     *matHeaderRowDef="clientDisplayedColumns"></tr>
 <tr mat-row *matRowDef="let element; columns: clientDisplayedColumns;" class="example-element-row"
-    [class.example-expanded-row]="element.Measure.Expanded">
+    [ngClass]="{
+        'example-expanded-row': element.Measure.Expanded,
+        'selectionBoxUnchecked': element.Measure.Selected == false
+    }">
 </tr>
 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 <tr mat-footer-row *matFooterRowDef="clientDisplayedColumns" [ngStyle]="{'visibility':this.rootReturns.length > 1 ? 'visible' : 'collapse' }"
