--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -15,7 +15,7 @@
                     <i class="material-icons" [ngClass]="ReadyToCollapseAll(element.MailTypeList) ? 'custom_line_weight_icon' : 'mi_drag_handle'"></i>
                 </button>
             </td>
-            <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>.
+            <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>
         </ng-container>
         <ng-container matColumnDef="selectionBox">
             <th mat-header-cell *matHeaderCellDef [ngClass]="selectionMode? 'sbcShifted' : 'sbc'"></th>
@@ -1240,8 +1240,9 @@
         <p>
             <mat-form-field>
                 <mat-select [(value)]="this.selectedClients" multiple>
-                    <mat-option *ngFor="let client of ClientArr" [value]="client.gClientAcronym" multiple>
-                        {{client.gClientName}}
+                    <input matInput type="text" (keyup)="filterclientArr($event.target.value)">
+                    <mat-option *ngFor="let client of filteredClientArr" [value]="client" multiple>
+                        {{client}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
