--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1247,7 +1247,23 @@
       }">
     <!--In order to not have two scrollbars you need to put the inner elements to scroll and the parent to not scroll-->
     <div class="toolboxScrollContainer" [ngStyle]="{'visibility': visibility}">
-        <p>
+            <form class="example-form">
+                    <mat-form-field class="example-full-width">
+                      <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+                      <mat-autocomplete #auto="matAutocomplete">
+                        <!-- <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                          {{option}}
+                        </mat-option> -->
+                        <mat-option *ngFor="let selectedClients of ClientArr" [value]="client">
+                                {{selectedClients.gClientName}}
+                        </mat-option>
+                      </mat-autocomplete>
+                    </mat-form-field>
+                  </form>
+
+
+
+
             <mat-form-field>
                 <mat-select [(value)]="this.selectedClients" multiple>
                     <mat-option *ngFor="let client of ClientArr" [value]="client.gClientAcronym" multiple>
@@ -1265,7 +1281,6 @@
                 <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
                 <mat-datepicker #endDatePicker></mat-datepicker>
             </mat-form-field>
-        </p>
         <p>
             <button mat-raised-button color="accent" (click)="applyChanges()"> Search </button>
         </p>
