added chips selection

--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1247,7 +1247,6 @@
       }">
     <!--In order to not have two scrollbars you need to put the inner elements to scroll and the parent to not scroll-->
     <div class="toolboxScrollContainer" [ngStyle]="{'visibility': visibility}">
-            <form class="example-form">
                     <mat-form-field class="example-full-width">
                       <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="clientControl" [matAutocomplete]="auto">
                       <mat-autocomplete #auto="matAutocomplete">
@@ -1259,7 +1258,62 @@
                         </mat-option>
                       </mat-autocomplete>
                     </mat-form-field>
-                  </form>
+
+
+                    <mat-form-field class="example-chip-list">
+                        <mat-chip-list #chipList>
+                          <mat-chip
+                            *ngFor="let client of clients"
+                            [selectable]="selectable"
+                            [removable]="removable"
+                            (removed)="remove(client)">
+                            {{client}}
+                            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                          </mat-chip>
+                          <input
+                            placeholder="Client..."
+                            #clientListInput
+                            [formControl]="clientControl"
+                            [matAutocomplete]="auto"
+                            [matChipInputFor]="chipList"
+                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                            [matChipInputAddOnBlur]="addOnBlur"
+                            (matChipInputTokenEnd)="add($event)">
+                        </mat-chip-list>
+                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                            <mat-option *ngFor="let client of filteredOptions" [value]="client">
+                                {{client}}
+                        </mat-option>
+                        </mat-autocomplete>
+                      </mat-form-field>
+
+
+                    <!-- <mat-form-field class="example-chip-list">
+                        <mat-chip-list #chipList>
+                          <mat-chip
+                            *ngFor="let fruit of fruits"
+                            [selectable]="selectable"
+                            [removable]="removable"
+                            (removed)="remove(fruit)">
+                            {{fruit}}
+                            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                          </mat-chip>
+                          <input
+                            placeholder="New fruit..."
+                            #fruitInput
+                            [formControl]="fruitCtrl"
+                            [matAutocomplete]="auto"
+                            [matChipInputFor]="chipList"
+                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                            [matChipInputAddOnBlur]="addOnBlur"
+                            (matChipInputTokenEnd)="add($event)">
+                        </mat-chip-list>
+                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                          <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
+                            {{fruit}}
+                          </mat-option>
+                        </mat-autocomplete>
+                      </mat-form-field> -->
 
 
 
