--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -3,6 +3,9 @@
 $btnColumnShift: 46px; //used to control the left column for both parent and child tables
 $selectionColumnShift: 32px;
 
+.example-chip-list {
+  width: 100%;
+}
 
 table {
   width: 100%;
