--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -41,7 +41,8 @@ $color-very-pale-orange: #ffdfc7;
     }
 }
 
-$material-box-shadow:0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+$material-box-shadow-default:0 2px 3px 0 rgba(0, 0, 0, 0.14), 0 2px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 2px -2px rgba(0, 0, 0, 0.2);
+$material-box-shadow-pressed:0 1px 1px rgba(0,0,0,0.12), 0 1px 1px rgba(0,0,0,0.24);
 
 $size-lg: 1200px;
 $size-md: 992px;
